# generic_deltamodel

./: .env  .gitignore  README.md  TODO.md  pyproject.toml  temp_extracted.grib.47d85.idx  test.py  tmp.py
analysis/: extract_dynamic_params.py
dmg/core/post/: plot_cdf.py  plot_hydrograph.py  plot_parameters.py  plot_statbox.py
dmg/core/utils/: conf.py  factory.py  path.py  spatial_testing.py  utils.py
dmg/models/criterion/: kge_batch_loss.py  kge_norm_batch_loss.py  mse_loss.py  nse_batch_loss.py  nse_sqrt_batch_loss.py  range_bound_loss.py  rmse_comb_loss.py  rmse_loss.py
dmg/models/delta_models/: dpl_model.py
dmg/models/multimodels/: ensemble_avg.py  ensemble_generator.py
dmg/models/neural_networks/: ann.py  any_rnn.py  cnn_transformer.py  cudnn_lstm.py  cudnn_lstm_depr.py  dual_attn_lstm_v2.py  dual_attn_lstm_v3.py  dual_attn_lstm_v4.py  gru_mlp.py  (+12 more)
dmg/trainers/: ms_trainer.py  pub_trainer.py  trainer.py
example/conf/: config_dblendv2.yaml  config_dblendv3.yaml
example/hydrology/: example_dhbv_1_1p.ipynb
project/: check_formula.py  process_data.py  run_blend.py  run_blend2.py  run_dhbv.py  run_dhmets.py  test.py
project/better_estimate/: README.md  pub_hopev1.py  pub_lstm.py  run_gru.py  run_hopev1.py  run_hopev2.py  run_lstm.py  run_tcn.py  run_transformer.py  test.py  test_ct_model.py  test_hope_model.py  trainval_basin_split.py
project/better_train/: demo2.py
project/betterestimate/: __init__.py  run_dalstm.py
project/dual_attn_bilstm/: run_dalstm.py
project/hydro_selection/: run_hbv_moe.py
project/hydroselection/: test_ensemble.py
(+46 files in other folders)
