[project]
name = "dmg"
version = "0.1.0"
description = "Differentiable modeling framework on PyTorch"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "cartopy>=0.24.1",
    "geopandas>=1.1.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "omegaconf>=2.3.0",
    "pandas>=2.3.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.5",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "uv>=0.7.12",
    "zarr>=3.0.8",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


# uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128